# packages

./: .gitignore  .shellspec  CLAUDE.md  Justfile  README.md  SECURITY.md  flake.nix  index.html  nix.conf
.claude/: principles.md
.devcontainer/: devcontainer.json
.github/: cachix-setup.md  image-matrix.json  sbom-policy.json
.github/ISSUE_TEMPLATE/: security.md
.github/workflows/: build-devcontainer.yml  build-oci-images.yml  build.yml  cache.yml  cleanup-nix-store.yml  cleanup-pr-images.yml  cleanup-stale-images.yml  cve-triage.yml  deploy-release-website.yml  pre-release.yml  promote.yml  provenance.yml  rescan-vulnerabilities.yml  sbom-generate-upload.yml  sbom-generate.yml  sbom-quality-gate-pending.yml  sbom-quality-gate-v2.yml  sbom-quality-gate.yml  sbom-upload-sbomify-com.yml  sbom-upload.yml  sbom.yml
.sisyphus/: boulder.json
.sisyphus/plans/: compliance-infrastructure.md
common/images/: minio.nix  (+5 more)
docs/: README.md  compliance.md  maintenance.md  nix-sbomify-action-feasibility.md  sbom-tooling-evaluation.md  usage.md
images/: caddy.nix  keycloak.nix  minio-client.nix  minio.nix  postgres.nix  redis.nix
nix-compliance-inator/: flake.nix
nix-cyclonedx-inator/: flake.nix
nix-cyclonedx-inator/transformer/: pyproject.toml  transform.py
nix-cyclonedx-inator/transformer/tests/: test_transform.py
sbom-src/: enrichment.cdx.json
spec/: build_and_push_spec.sh  cleanup_pr_images_spec.sh  extract_sbom_attestation_spec.sh  patch_sbom_root_spec.sh  promote_image_spec.sh  sbom_compare_spec.sh  sbom_report_spec.sh  sbom_score_spec.sh  spec_helper.sh
(+379 files in other folders)
